--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,18 +1,23 @@
+2003-09-06  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* zlib.ads, zlib.adb:
+	Remove a few DOS style CR at the end of lines.
+
 2004-09-02  Pascal Obry  <pascal@obry.org>
 
-	* ai302-containers-hash_tables.ads, ai302-containers-hash_tables.adb: 
+	* ai302-containers-hash_tables.ads, ai302-containers-hash_tables.adb:
 	Update to new version of the AI302 containers.
 
 	* ai302-containers-indefinite_hashed_maps.ads,
 	  ai302-containers-indefinite_hashed_maps.adb:
 	Update to new version of the AI302 containers.
 
-	* ai302-containers-indefinite_ordered_sets.ads, 
+	* ai302-containers-indefinite_ordered_sets.ads,
 	  ai302-containers-indefinite_ordered_sets.adb:
 	Update to new version of the AI302 containers.
 
-	* ai302-containers-indefinite_vectors.ads, 
-	  ai302-containers-indefinite_vectors.adb: 
+	* ai302-containers-indefinite_vectors.ads,
+	  ai302-containers-indefinite_vectors.adb:
 	Update to new version of the AI302 containers.
 
 	* ai302-containers-prime_numbers.ads,
