--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -4,6 +4,9 @@
 	  wait2_sec.out, makefile:
 	New regression test.
 
+	* wait_pack.adb:
+	(Client_Task): Do not operate under empty set.
+
 2004-09-06  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* dispatch.adb, dispatch_method.adb, dispatch_vh.adb, dispatch_vh.out,
