--- a/docs/TODO
+++ b/docs/TODO
@@ -179,3 +179,8 @@ implemented:
   2. Remove all uploaded files after calling the user callback. The user is
      responsible to move/rename/whatever the uploaded file is necessary
      otherwise it is just removed.
+
+  3. Make API for read file upload inside of regular user callback just from
+     socket hidden in the AWS.Status.Data. We would not need intermediate data
+     file with distorted name and would reach upload authentication before
+     real upload.
