--- a/config/ChangeLog
+++ b/config/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-13  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* src/check_config.c:
+	(Addr_Info): Ada bind to addrinfo C record. Need to be generated
+	 because Linux has a different fields order then in other platforms.
+
 2004-08-10  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-net-std__adasockets.adb, aws-net-std__gnat.adb:
