--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2004-09-14  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* makefile:
+	Add dependence aws-os_lib-definitions.ads from ../config/src/check_config.c,
+	 otherwise recompilation of check_config.c does not happen on
+	 it modification.
+
 2004-09-13  Pascal Obry  <pascal@obry.org>
 
 	* aws-net-thin.ads:
