--- a/config/ChangeLog
+++ b/config/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-14  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* src/check_config.c:
+	(Addr_Info): Add pragma Convention.
+
 2004-09-13  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* src/check_config.c:
