--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,9 +1,16 @@
+2004-09-15  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-net-thin.ads:
+	(AI_PASSIVE): New constant.
+	(AI_CANONNAME): New constant.
+	(AI_NUMERICHOST): New constant.
+
 2004-09-14  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* makefile:
-	Add dependence aws-os_lib-definitions.ads from ../config/src/check_config.c,
-	 otherwise recompilation of check_config.c does not happen on
-	 it modification.
+	Add dependence aws-os_lib-definitions.ads from
+	 ../config/src/check_config.c, otherwise recompilation of
+	 check_config.c does not happen on it modification.
 
 2004-09-13  Pascal Obry  <pascal@obry.org>
 
