--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,17 @@
+2004-09-15  Pascal Obry  <pascal@obry.org>
+
+	* aws-client.ads, aws-client.adb, aws-headers.ads, aws-headers.adb,
+	  aws-messages.ads, aws-mime.ads, aws-mime.adb, aws-status.ads,
+	  aws-status.adb, aws-status-set.ads, aws-status-set.adb,
+	  aws-server-protocol_handler.adb:
+	Merge from the multipart_related branch.
+	New feature contributed by Henrik Sundberg.
+	
+	* aws-attachments.ads, aws-attachments.adb:
+	Initial revision.
+	Merge from the multipart_related branch.
+	New feature contributed by Henrik Sundberg.
+
 2004-09-15  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-net-thin.ads:
