--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,8 @@
 2004-09-15  Pascal Obry  <pascal@obry.org>
 
+	* src.gpr:
+	Do not use "null;" as it is not support on GNAT 5.02.
+
 	* makefile:
 	(SOURCES): Add aws-attachments.adb.
 
