--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-16  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* sock1.adb:
+	Use Exception_Information for more information in case of regression.
+
 2004-09-15  Pascal Obry  <pascal@obry.org>
 
 	* upload.out:
