--- a/config/ChangeLog
+++ b/config/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-17  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-net-std__adasockets.adb, aws-net-std__gnat.adb:
+	(Pending): New routine.
+
 2004-09-16  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* src/check_config.c:
