--- a/win32/ChangeLog
+++ b/win32/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-17  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* wspiapi.h:
+	Remove DOS CR at end of lines.
+
 2004-09-16  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* wspiapi.h:
