--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-17  Pascal Obry  <pascal@obry.org>
+
+	* aws-net-buffered.adb:
+	(Read): Add some comments.
+
 2004-09-17  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-net.ads, aws-net-std.ads, aws-net-ssl.ads, aws-net-ssl.adb:
