--- a/config/ChangeLog
+++ b/config/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-20  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-net-std__adasockets.adb:
+	Timeout on connect.
+
 2004-09-19  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* src/check_config.c:
