--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,11 @@
+2004-09-20  Pascal Obry  <pascal@obry.org>
+
+	* templates_parser.adb, templates_parser-print_tree.adb:
+	Update to version 9.0 if the templates engine. This new version
+	 provides support for table block section to avoid text duplication.
+	It also contains a little speed optimization as a counter is now
+	computed at load time instead of during the parsing.
+
 2004-09-19  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-net.ads:
