--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-20  Pascal Obry  <pascal@obry.org>
+
+	* upload5.adb:
+	Serialize output between tasks to ensure consistent output.
+
 2004-09-17  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* sock3_proc.adb:
