--- a/config/ChangeLog
+++ b/config/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-21  Pascal Obry  <pascal@obry.org>
+
+	* src/check_config.c:
+	Include <sys/types.h> to fix build failure on FreeBSD.
+
 2004-09-20  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-net-std__adasockets.adb:
