--- a/win32/ChangeLog
+++ b/win32/ChangeLog
@@ -1,3 +1,12 @@
+2004-09-23  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* gai_strerror.c:
+	Simple thread safe gai_strerror for Win32.
+
+	* makefile:
+	Concatenate libpoll.a and libwspiapi.a into libaws-win32.a and add
+	gai_strerror.o there.
+
 2004-09-21  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* wspiapi.c:
