--- a/config/ChangeLog
+++ b/config/ChangeLog
@@ -1,5 +1,11 @@
 2004-09-23  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
+	* src/check_config.c:
+	(SO_ERROR): Add constant not defined in AdaSockets.
+	(ETIMEDOUT): Idem.
+
+2004-09-23  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
 	* aws-net-std__gnat.adb:
 	(Get_Addr_Info): Use GAI_StrError in error handling.
 
