--- a/config/ChangeLog
+++ b/config/ChangeLog
@@ -4,6 +4,11 @@
 	(SO_ERROR): Add constant not defined in AdaSockets.
 	(ETIMEDOUT): Idem.
 
+	* aws-net-std__adasockets.adb:
+	(Get_Addr_Info): Use GAI_StrError in error handling.
+	(Errno): New routine.
+	(Connect): Implement timeout.
+
 2004-09-23  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-net-std__gnat.adb:
