Add:   Also remove the use of dll2def. We will provides the win32 definition files   for the OpenSSL libraries.

--- a/docs/TODO
+++ b/docs/TODO
@@ -171,3 +171,5 @@ implemented:
 
 - Remove the build based on makefile rules and only support GNAT Project files.
   Having both to support is a pain.
+  Also remove the use of dll2def. We will provides the win32 definition files
+  for the OpenSSL libraries.
